--- a/src/assets/styles/Images.scss
+++ b/src/assets/styles/Images.scss
@@ -15,3 +15,31 @@
     width: 200px;
   }
 }
+
+.image-wide {
+  width: 100%;
+}
+
+.image-h-660-450 {
+  height: 450px;
+  @include respond-to(desktop-up) {
+    height: 660px;
+  }
+}
+
+.image-900-fill {
+  width: 100%;
+  height: 100%;
+  @include respond-to(tablet-portrait-up) {
+    width: 100%;
+    height: auto;
+  }
+  @include respond-to(desktop-up) {
+    width: 600px;
+    height: auto;
+  }
+  @include respond-to(big-desktop-up) {
+    width: 900px;
+    height: auto;
+  }
+}
