--- a/src/assets/styles/Master.scss
+++ b/src/assets/styles/Master.scss
@@ -10,7 +10,7 @@ html,
 body {
   font-size: 12px !important;
   font-family: $font-open-sans !important;
-  height: 100%;
+  background-color: $dirty-white !important;
 }
 
 .footer-icons {
@@ -21,7 +21,7 @@ body {
   padding: 50px 0;
 }
 
-.footer-nav {
+.footer-nav {;
   width: 100%;
   display: flex;
   & .footer-pipe {
