Update mens index page

--- a/views/mens-home.ejs
+++ b/views/mens-home.ejs
@@ -47,7 +47,7 @@
                  class="image-900-fill"/>
         </div>
     </div>
-    <div class="d-flex justify-content-around w-100 align-items-center flex-mobile-column wrap-top-30">
+    <div class="d-flex justify-content-around w-100 align-items-center flex-mobile-column-alt wrap-top-30">
         <div class="d-flex justify-content-center align-items-center flex-grow-desk mr-lg-4 flex-column mens-banner-container">
             <img src="https://www.nixon.com/on/demandware.static/-/Library-Sites-Nixon/default/dwed64ff51/back-to-school_50x50.jpg"
                  alt="image" class="h-auto image-wide"/>
@@ -70,7 +70,7 @@
             <a href="#" class="text-dark font-weight-bold">Shop Now</a>
         </div>
     </div>
-    <div class="d-flex justify-content-around w-100 align-items-center flex-mobile-column">
+    <div class="d-flex justify-content-around w-100 align-items-center flex-mobile-column-alt">
         <div class="d-flex justify-content-center align-items-center flex-grow-desk mr-lg-4 flex-column mens-banner-container">
             <img src="https://www.nixon.com/on/demandware.static/-/Library-Sites-Nixon/default/dwb4a931c1/mens-custom-time-teller.jpg"
                  alt="image" class="h-auto image-wide"/>
