--- a/views/mens-home.ejs
+++ b/views/mens-home.ejs
@@ -97,9 +97,12 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0"
-     id="mens-discovery">
+<div class="d-flex justify-content-center align-items-center bg-white py-4">
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="mens-new-arrival"></div>
+</div>
 
+<div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0 py-5"
+     id="mens-discovery">
 </div>
 
 <script src="/mens.js" type="text/javascript"></script>
