--- a/views/mens-home.ejs
+++ b/views/mens-home.ejs
@@ -30,8 +30,8 @@
 <div class="d-flex justify-content-center align-items-center py-5 link-plain kenny-container-80
     flex-column overflow-hidden">
     <div class="d-flex justify-content-center align-items-center flex-mobile-column-alt bg-white mb-5">
-        <div class="d-flex justify-content-center align-items-center p-5 order-1-mobile text-align-center-mobile">
-            <div class="d-flex flex-column w-75-100">
+        <div class="d-flex justify-content-center align-items-center p-5 order-1-mobile">
+            <div class="d-flex flex-column w-75-100 flex-mobile-center text-align-center-mobile">
                 <h2 class="section-header text-uppercase">Plant your flag</h2>
                 <p class="section-desc transform-none font-weight-bold text-muted">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam massa,
@@ -41,7 +41,7 @@
                            w-40-70-100 font-weight-bold text-uppercase">Shop Now</a>
             </div>
         </div>
-        <div class="d-flex justify-content-center align-items-center flex-grow order-0-mobile">
+        <div class="d-flex justify-content-center align-items-center flex-grow-desk order-0-mobile">
             <img src="https://images.unsplash.com/photo-1434056886845-dac89ffe9b56?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
                  alt="img"
                  class="image-900-fill"/>
