Add womens index page, update navbar and relate styles and update components and related assets

--- a/views/mens-home.ejs
+++ b/views/mens-home.ejs
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center flex-column position-relative link-plain">
-    <div class="mens-banner-image">
+    <div class="banner-image mens-banner-image">
     </div>
     <div class="kenny-container pos-abs-center-desk">
         <div class="d-flex banner-content flex-column flex-mobile-center">
@@ -105,4 +105,4 @@
      id="mens-discovery">
 </div>
 
-<script src="/mens.js" type="text/javascript"></script>
+<script src="/categoryIndex.js" type="text/javascript"></script>
