--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -6,6 +6,14 @@
 
 .kenny-nav-landed {
   @include respond-to(desktop-up) {
+    & .navigation-primary-link {
+      border-bottom: thin solid transparent  !important;
+
+      &:hover {
+        border-bottom: thin solid white !important;
+      }
+    }
+
     &:hover {
       background-color: black;
     }
@@ -117,6 +125,8 @@
     @include respond-to(desktop-up) {
       padding: 15px;
       font-size: 1rem;
+      border-bottom: 2px solid black;
+      transition: border-bottom-color 0.4s ease-in-out;
       &:after {
         content: "\2038";
         font-size: 2rem;
