Add bags and clothing landing pages, add new assets and update styles

--- a/src/assets/styles/category-index.scss
+++ b/src/assets/styles/category-index.scss
@@ -47,6 +47,19 @@
   }
 }
 
+.bags-banner-image {
+  background-image: url("/images/bg-06s.jpg");
+  background-position: center;
+
+  @include respond-to(desktop-up) {
+    background-image: url("/images/bg-06t.jpg");
+  }
+}
+
+.clothing-banner-image {
+  background-image: url("/images/bg-07t.jpg");
+}
+
 .nav-banner {
   display: flex;
   justify-content: center;
