--- a/views/bags-home.ejs
+++ b/views/bags-home.ejs
@@ -59,7 +59,13 @@
 
 <div class="d-flex justify-content-center align-items-center bg-white py-4">
     <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0"
-         id="womens-new-arrival"></div>
+         id="bags-new-arrival"></div>
+</div>
+
+<div class="d-flex justify-content-center align-items-center bg-white py-4">
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0"
+         id="bags-featured"></div>
 </div>
 
 <script src="/categoryIndex.js" type="text/javascript"></script>
+<script src="/bags.js" type="text/javascript"></script>
