--- a/src/assets/styles/Text.scss
+++ b/src/assets/styles/Text.scss
@@ -35,6 +35,10 @@
   line-height: 2.5rem;
 }
 
+.color-logo {
+  color: rgba(235, 110, 110, 1);
+}
+
 /* Alignments */
 .text-align-center-lg {
   text-align: left;
