--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,18 +1,18 @@
 <footer class="footer d-flex justify-content-center align-items-center flex-column bg-black link-plain wrap-20">
     <div class="d-flex align-self container flex-column">
-        <div class="footer-icons flex-mobile-column">
+        <div class="footer-icons flex-mobile-column-alt">
             <div class="d-flex justify-content-center align-items-center text-white font-righteous">
                 <h1 class="mr-3"><a href="#" class="text-white">KENNEDY</a></h1>
-                <h2>
+                <h2 class="color-logo">
                     <i class="far fa-gem"></i>
                 </h2>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <a href="#" class="mx-4"><h1><i class="fab fa-instagram"></i></h1></a>
-                <a href="#" class="mx-4"><h1><i class="fab fa-pinterest"></i></h1></a>
-                <a href="#" class="mx-4"><h1><i class="fab fa-facebook-f"></i></h1></a>
-                <a href="#" class="mx-4"><h1><i class="fab fa-vimeo-v"></i></h1></a>
-                <a href="#" class="mx-4"><h1><i class="fab fa-twitter"></i></h1></a>
+                <a href="#" class="hover-scale mx-4"><h1><i class="fab fa-instagram"></i></h1></a>
+                <a href="#" class="hover-scale mx-4"><h1><i class="fab fa-pinterest"></i></h1></a>
+                <a href="#" class="hover-scale mx-4"><h1><i class="fab fa-facebook-f"></i></h1></a>
+                <a href="#" class="hover-scale mx-4"><h1><i class="fab fa-vimeo-v"></i></h1></a>
+                <a href="#" class="hover-scale mx-4"><h1><i class="fab fa-twitter"></i></h1></a>
             </div>
         </div>
         <div class="footer-nav p-0 flex-mobile-column">
