--- a/views/bags-home.ejs
+++ b/views/bags-home.ejs
@@ -67,5 +67,20 @@
          id="bags-featured"></div>
 </div>
 
+<div class="d-flex justify-content-center align-items-center my-4 flex-column">
+    <p class="text-center section-desc transform-none m-0 p-5 w-75-100">
+        Whether you’re heading to the office or your next surfing trip, our rough and ready backpacks are the
+        perfect choice for keeping your gear safe and secure. With strong, durable materials and our signature eye for
+        detail, you can rely on our bags to get the job done. Check out our collection and find your new favorite
+        everyday carry item. 
+    </p>
+    <div class="d-flex justify-content-center align-items-center border-top w-100 pt-4 flex-mobile-column-alt sign-up-container">
+        <h4 class="font-weight-bold text-muted">Get The Latest From Kennedy</h4>
+        <input type="text" class="form-control sign-up-field" placeholder="e-mail address">
+        <input type="button" class="btn-input-lg btn-black
+                           btn-sign-up-field font-weight-bold text-uppercase" value="join"/>
+    </div>
+</div>
+
 <script src="/categoryIndex.js" type="text/javascript"></script>
 <script src="/bags.js" type="text/javascript"></script>
