--- a/views/clothing-home.ejs
+++ b/views/clothing-home.ejs
@@ -45,4 +45,18 @@
          id="womens-new-arrival"></div>
 </div>
 
+<div class="d-flex justify-content-center align-items-center my-4 flex-column">
+    <p class="text-center section-desc transform-none m-0 p-5 w-75-100">
+        Function and form are given equal credence here at Nixon. Whether it’s t-shirts, hoodies, sweaters or jackets,
+        you’ll find our signature aesthetic paired seamlessly with incredible attention to detail. The result? Timeless
+        pieces that complement any wardrobe and stand up to whatever you put them through.  
+    </p>
+    <div class="d-flex justify-content-center align-items-center border-top w-100 pt-4 flex-mobile-column-alt sign-up-container">
+        <h4 class="font-weight-bold text-muted">Get The Latest From Kennedy</h4>
+        <input type="text" class="form-control sign-up-field" placeholder="e-mail address">
+        <input type="button" class="btn-input-lg btn-black
+                           btn-sign-up-field font-weight-bold text-uppercase" value="join"/>
+    </div>
+</div>
+
 <script src="/categoryIndex.js" type="text/javascript"></script>
