--- a/views/womens-home.ejs
+++ b/views/womens-home.ejs
@@ -103,8 +103,26 @@
     <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="womens-new-arrival"></div>
 </div>
 
-<div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0 py-5"
-     id="womens-discovery">
+
+<div class="d-flex justify-content-center align-items-center flex-column bg-white">
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0 py-5"
+         id="womens-discovery">
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+        <p class="text-center section-desc transform-none m-0 p-5">
+            Women's watches and accessories from beach to street, high-tech digital to classic analog. Kennedy focused
+            on making the little stuff better.
+        </p>
+    </div>
+</div>
+<div class="d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center align-items-center border-top w-100 p-4 flex-mobile-column-alt
+        sign-up-container">
+        <h4 class="font-weight-bold text-muted">Get The Latest From Kennedy</h4>
+        <input type="text" class="form-control sign-up-field" placeholder="e-mail address">
+        <input type="button" class="btn-input-lg btn-black
+                           btn-sign-up-field font-weight-bold text-uppercase" value="join"/>
+    </div>
 </div>
 
 <script src="/categoryIndex.js" type="text/javascript"></script>
