Update components, assets and styles

--- a/views/clothing-home.ejs
+++ b/views/clothing-home.ejs
@@ -42,12 +42,16 @@
 
 <div class="d-flex justify-content-center align-items-center bg-white py-4">
     <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0"
-         id="womens-new-arrival"></div>
+         id="hats-accessories-banner"></div>
+</div>
+<div class="d-flex justify-content-center align-items-center bg-white py-4">
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0"
+         id="shirts-tees-banner"></div>
 </div>
 
 <div class="d-flex justify-content-center align-items-center my-4 flex-column">
     <p class="text-center section-desc transform-none m-0 p-5 w-75-100">
-        Function and form are given equal credence here at Nixon. Whether it’s t-shirts, hoodies, sweaters or jackets,
+        Function and form are given equal credence here at Kennedy. Whether it’s t-shirts, hoodies, sweaters or jackets,
         you’ll find our signature aesthetic paired seamlessly with incredible attention to detail. The result? Timeless
         pieces that complement any wardrobe and stand up to whatever you put them through.  
     </p>
@@ -59,4 +63,5 @@
     </div>
 </div>
 
+<script src="/apparel.js" type="text/javascript"></script>
 <script src="/categoryIndex.js" type="text/javascript"></script>
