--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -113,6 +113,7 @@
 
     & .kenny-nav-item {
       display: flex;
+      cursor: pointer;
       @include respond-to(desktop-up) {
         padding: 0 20px;
       }
