--- a/src/assets/styles/Master.scss
+++ b/src/assets/styles/Master.scss
@@ -58,6 +58,9 @@ body {
         -ms-transition: transform 0.3s ease-in-out;
         -o-transition: transform 0.3s ease-in-out;
         transition: transform 0.3s ease-in-out;
+        @include respond-to(tablet-portrait-up) {
+          margin-right: 5%;
+        }
       }
       text-transform: uppercase;
       letter-spacing: 0.4px;
