--- a/src/assets/styles/category-index.scss
+++ b/src/assets/styles/category-index.scss
@@ -7,7 +7,7 @@
   padding: 30px 15px;
   background-color: $dirty-white;
   text-align: center;
-  @include respond-to(tablet-landscape-up) {
+  @include respond-to(desktop-up) {
     text-align: initial;
     background-color: transparent;
     padding: 0;
@@ -23,6 +23,10 @@
   position: relative;
   width: 100%;
   padding-bottom: 100%;
+
+  @include respond-to(tablet-portrait-up) {
+    padding-bottom: 50%;
+  }
 
   @include respond-to(desktop-up) {
     background-position: initial;
