Add scroll to top button to master layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,12 @@
 <body>
 <div id="nav-container" class="d-flex justify-content-center flex-column"></div>
 <%- body %>
+<div class="d-flex scroll-up-container text-white">
+    <i class="fas fa-angle-double-up"></i>
+    <div class="text-uppercase font-small">
+        To Top
+    </div>
+</div>
 <%- include footer.ejs %>
 <script type="text/javascript" src="/main.js"></script>
 </body>
