--- a/src/assets/styles/Wrappers.scss
+++ b/src/assets/styles/Wrappers.scss
@@ -402,3 +402,30 @@
     overflow: initial;
   }
 }
+
+.scroll-up-container {
+  background-color: black;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  right: 0;
+  bottom: 20%;
+  cursor: pointer;
+  z-index: 2;
+  -webkit-transform: translate3d(79px, 0, 0);
+  -moz-transform: translate3d(79px, 0, 0);
+  -ms-transform: translate3d(79px, 0, 0);
+  -o-transform: translate3d(79px, 0, 0);
+  transform: translate3d(79px, 0, 0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.scroll-up-container-shown {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
