--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -184,6 +184,7 @@
       transform: none;
       visibility: hidden;
       opacity: 0;
+      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     }
 
     & .navigation-mega-menu {
