--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -10,6 +10,7 @@ $mat-blue: #0d47a1;
 $color-second-level-link: #9b9e9f;
 $dirty-white: #f7f8f9;
 $kenny-black: #1e1e1e;
+$light-grey: #f0f0f0;
 
 /* Fonts */
 $font-righteous: 'Righteous', cursive;
