--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -4,6 +4,7 @@
 @import "scss/fontawesome";
 @import "scss/brands";
 @import "scss/solid";
+@import "scss/regular";
 
 /* Colors */
 $mat-blue: #0d47a1;
