--- a/src/assets/styles/Text.scss
+++ b/src/assets/styles/Text.scss
@@ -81,6 +81,13 @@
   }
 }
 
+.text-regular-mobile {
+  font-size: 1.5rem;
+  @include respond-to(tablet-portrait-up) {
+    font-size: 2.5rem;
+  }
+}
+
 .section-header {
   font-weight: 700;
   font-size: 28px;
