--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,3 +1,13 @@
 <div class="d-flex" id="product-prev-container"></div>
+<div class="d-flex justify-content-center align-self-center py-5 h-auto flex-column bg-white">
+    <div class="d-flex justify-content-center align-items-center flex-column text-center wrap-top-30">
+        <h2 class="section-header text-uppercase">Kennedy Essentials</h2>
+        <p class="section-desc w-40-70-100 transform-none text-muted line-height-18-26">
+            Focused on making the little stuff better, we’re driven to create custom built
+            products that reflect our unique point of view, our heritage, our style, and we don’t
+            stop until we get it right </p>
+    </div>
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="featured-watches"></div>
+</div>
 
 <script src="/productPrev.js" type="text/javascript"></script>
