fix carousel container arrow bug

--- a/src/assets/styles/Wrappers.scss
+++ b/src/assets/styles/Wrappers.scss
@@ -248,7 +248,7 @@
     }
   }
 
-  .arrow-container {
+  & .arrow-container {
     position: absolute;
     display: flex;
     justify-content: center;
