Update Catalog component, watch images and API related stuff
+ Added initial logic for catalog item generation

--- a/views/womens-home.ejs
+++ b/views/womens-home.ejs
@@ -125,4 +125,9 @@
     </div>
 </div>
 
+<div id="test">
+
+</div>
+
+<script src="/catalog.js" type="text/javascript"></script>
 <script src="/categoryIndex.js" type="text/javascript"></script>
