--- a/src/assets/styles/components/Catalog.scss
+++ b/src/assets/styles/components/Catalog.scss
@@ -1,16 +1,35 @@
 @import "../globals";
 
 .catalog-item-header {
+  color: black;
   font-size: 1.5rem;
   text-align: center;
   text-transform: uppercase;
-  font-weight: bold;
   margin: 0 !important;
+  @include respond-to(tablet-portrait-up) {
+    font-size: 2rem;
+  }
 }
 
 .catalog-item-desc {
   font-size: 1rem;
   line-height: 20px;
   text-align: center;
+  margin: .2rem 0;
   text-transform: capitalize;
+  @include respond-to(tablet-portrait-up) {
+    font-size: 1.3rem;
+  }
+}
+
+.catalog-filter-container {
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  transform: translate3d(0, 0, 0);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.catalog-item {
+  max-width: 300px;
 }
