--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -2,7 +2,7 @@
     <div class="banner-image catalog-banner-image"></div>
     <div class="kenny-container pos-abs-center-desk">
         <div class="d-flex banner-content flex-column flex-mobile-center justify-content-center align-items-center">
-            <h2 class="section-header text-emphasize-alt text-uppercase text-invert-mobile my-lg-4">All Watches</h2>
+            <h2 class="section-header text-emphasize-alt text-uppercase text-invert-mobile my-lg-4">Watches</h2>
             <p class="section-desc w-40-70-100 text-center transform-none line-height-18-26 text-invert-mobile">
                 Vestibulum aliquet diam sodales nibh eleifend iaculis. Proin consequat dolor felis, at finibus est pellentesque vel.
                 Vestibulum porttitor arcu in ligula laoreet aliquet.
