Update Catalog Component and related assets

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -12,6 +12,7 @@ $color-second-level-link: #9b9e9f;
 $dirty-white: #f7f8f9;
 $kenny-black: #1e1e1e;
 $light-grey: #f0f0f0;
+$kenny-red: rgba(235, 110, 110, 1);
 
 /* Fonts */
 $font-righteous: 'Righteous', cursive;
