--- a/src/assets/styles/components/Catalog.scss
+++ b/src/assets/styles/components/Catalog.scss
@@ -54,8 +54,8 @@
     font-size: 2.5rem;
     position: absolute;
     display: inline-block;
-    transition: transform 0.3s ease;
-    transform: translate3d(90%, 12%, 0) rotate3d(1, 0, 0, 180deg);
+    transition: transform 0.3s linear;
+    transform: translate3d(90%, 12%, 0) rotate3d(0, 0, 1, 180deg);
   }
 
   &:hover {
