--- a/src/assets/styles/components/Catalog.scss
+++ b/src/assets/styles/components/Catalog.scss
@@ -27,17 +27,28 @@
   width: 100%;
   background-color: white;
   transform: translate3d(0, 0, 0);
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .catalog-item {
+  & p {
+    transition: color 0.3s ease-in-out;
+  }
+
   max-width: 300px;
+
+  &:hover {
+    & p {
+      color: $kenny-red !important;
+    }
+  }
 }
 
 .catalog-filter-item {
   &:hover {
-    &  .catalog-filter-menu {
-      height: 400px;
+    & .catalog-filter-menu {
+      max-height: 400px;
+      height: auto;
       opacity: 1;
     }
   }
@@ -48,6 +59,7 @@
   cursor: pointer;
   position: relative;
   padding: 30px;
+
   &:after {
     content: "\2038";
     color: $kenny-red;
@@ -69,19 +81,53 @@
   display: flex;
   top: 100%;
   position: absolute;
-  height: 0;
-  width: 200px;
+  max-height: 0;
+  width: 250px;
   background-color: black;
   opacity: 0;
-  transition: height 0.3s linear, opacity 0.3s linear;
+  transition: max-height 0.3s linear, opacity 0.3s linear;
   overflow: hidden;
+  padding: 15px 0;
 
   &:hover {
-    height: 400px;
     & + .catalog-filter-header {
       &:after {
         transform: translate3d(90%, -55%, 0) rotate3d(0, -1, 0, 180deg);
       }
     }
+  }
+}
+
+.filter-item-label {
+  text-transform: uppercase;
+  width: 175px;
+  margin: 5px 10px;
+  font-size: 1.2rem;
+}
+
+.filter-item-box {
+  border-radius: 3px;
+}
+
+.filter-item-radio {
+  border-radius: 50%;
+}
+
+.filter-item-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: black;
+  border: thin solid $kenny-red;
+  height: 20px;
+  width: 20px;
+  transition: background-color 0.3s ease;
+
+  &:checked {
+    background-color: $kenny-red;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
