--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -71,6 +71,16 @@
     position: fixed;
   }
 
+  & .nav-icons {
+    font-size: 1.5rem;
+    & > .nav-icon {
+      padding: 0 15px;
+    }
+    @include respond-to(tablet-landscape-up) {
+      border-left: thin solid $kenny-red;
+    }
+  }
+
   & .nav-header {
     position: relative;
     display: flex;
