--- a/src/assets/styles/components/Catalog.scss
+++ b/src/assets/styles/components/Catalog.scss
@@ -45,12 +45,39 @@
 }
 
 .catalog-filter-item {
-  &:hover {
-    & .catalog-filter-menu {
-      max-height: 400px;
-      height: auto;
-      opacity: 1;
+  @include respond-to(desktop-up) {
+    &:hover {
+      & .catalog-filter-menu {
+        max-height: 400px;
+        height: auto;
+        opacity: 1;
+      }
     }
+  }
+}
+
+.filter-container-shown {
+  visibility: visible !important;
+  opacity: 1 !important;
+  z-index: 1;
+}
+
+.catalog-filter-menu-container {
+  position: absolute;
+  top: 100%;
+  visibility: hidden;
+  opacity: 0;
+  display: table;
+  background-color: black;
+  flex-direction: column;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, height 0.3s ease-in-out;
+  @include respond-to(desktop-up) {
+    position: relative;
+    display: flex;
+    top: 0;
+    visibility: visible;
+    opacity: 1;
+    flex-direction: row;
   }
 }
 
@@ -61,38 +88,53 @@
   padding: 30px;
 
   &:after {
-    content: "\2038";
+    @include respond-to(desktop-up) {
+      content: "\2038";
+      font-family: inherit;
+      font-size: 2.5rem;
+    }
+    content: '\f053';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
     color: $kenny-red;
-    font-size: 2.5rem;
+    font-size: 1rem;
     position: absolute;
     display: inline-block;
     transition: transform 0.3s linear;
     transform: translate3d(90%, 12%, 0) rotate3d(0, 0, 1, 180deg);
   }
 
-  &:hover {
-    &:after {
-      transform: translate3d(90%, -55%, 0) rotate3d(0, -1, 0, 180deg);
+  @include respond-to(desktop-up) {
+    &:hover {
+      &:after {
+        transform: translate3d(90%, -55%, 0) rotate3d(0, -1, 0, 180deg);
+      }
     }
   }
 }
 
 .catalog-filter-menu {
   display: flex;
-  top: 100%;
   position: absolute;
-  max-height: 0;
-  width: 250px;
+  top: 0;
   background-color: black;
   opacity: 0;
   transition: max-height 0.3s linear, opacity 0.3s linear;
   overflow: hidden;
   padding: 15px 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 
-  &:hover {
-    & + .catalog-filter-header {
-      &:after {
-        transform: translate3d(90%, -55%, 0) rotate3d(0, -1, 0, 180deg);
+  @include respond-to(desktop-up) {
+    top: 100%;
+    width: 250px;
+    max-height: 0;
+    &:hover {
+      & + .catalog-filter-header {
+        &:after {
+          transform: translate3d(90%, -55%, 0) rotate3d(0, -1, 0, 180deg);
+        }
       }
     }
   }
