Update components and assets
- temporarily removed anything that uses jquery

--- a/views/mens-home.ejs
+++ b/views/mens-home.ejs
@@ -7,7 +7,7 @@
             <p class="section-desc w-40-70-100 transform-none line-height-18-26 text-invert-mobile">
                 Quisque quam quam, aliquam id hendrerit quis, pharetra sed sapien. Aliquam.
             </p>
-            <a href="#" class="btn-input-lg text-white btn-outline-dark-mobile
+            <a href="/catalog/men" class="btn-input-lg text-white btn-outline-dark-mobile
                            w-25-70-100 font-weight-bold text-uppercase">Shop Now</a>
         </div>
     </div>
