--- a/views/womens-home.ejs
+++ b/views/womens-home.ejs
@@ -42,7 +42,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam massa,
                     consectetur sed felis non, commodo placerat diam.
                 </p>
-                <a href="#" class="btn-input-lg btn-black
+                <a href="/catalog/women" class="btn-input-lg btn-black
                            w-40-70-100 font-weight-bold text-uppercase">Shop Now</a>
             </div>
         </div>
