--- a/src/assets/styles/Index.scss
+++ b/src/assets/styles/Index.scss
@@ -1,11 +1,5 @@
 @import "globals";
 
-#landing-banner {
-  background-image: url("/images/bg-03.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
 .store-locator-banner {
   background-image: url("/images/bg-02d.jpg");
   height: auto;
@@ -18,6 +12,48 @@
   @include respond-to(desktop-up) {
     padding: 10%;
   }
+}
+
+.landing-show {
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-image: url("/images/slide-01.jpg");
+  background-position: center;
+  background-size: cover;
+
+  & > .landing-show-image {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 1s ease;
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+.landing-show-image-shown {
+  opacity: 1 !important;
+}
+
+.slide-show-container {
+  position: absolute;
+}
+
+.landing-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  position: absolute;
+}
+
+#slide-show-container {
+  width: inherit;
+  height: inherit;
 }
 
 //.landing-half {
