--- a/src/assets/styles/Wrappers.scss
+++ b/src/assets/styles/Wrappers.scss
@@ -5,6 +5,13 @@
   padding: 20px;
 }
 
+.wrap-20-mobile {
+  padding: 20px;
+  @include respond-to(tablet-portrait-up) {
+    padding: 0;
+  }
+}
+
 .wrap-50 {
   padding: 50px;
 }
