--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <!--https://unsplash.com/photos/mId2gG0a9GU-->
 <!--https://unsplash.com/photos/nXruwpNrOzQ-->
-<div class="w-100 h-100 bg-black d-flex justify-content-center align-items-center wrap-20" id="landing-banner">
-    <div class="d-flex justify-content-center  align-items-center text-white flex-column link-plain">
+<div class="w-100 h-100 bg-black d-flex justify-content-center align-items-center">
+    <div id="slide-show-container"></div>
+    <div class="landing-text link-plain wrap-20-mobile">
         <h1 class="text-emphasize font-pacifico my-4">Redefine Sophisticated</h1>
         <h4 class="w-40-70-100 line-height-2 text-align-center-lg">
             Proin ex turpis, ornare vitae lorem ut, mattis tempus augue. Nam non placerat eros, ut finibus dolor.
@@ -55,3 +56,4 @@
     <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="discover-kenny"></div>
 </div>
 <script type="text/javascript" src="/index.js"></script>
+<script type="text/javascript" src="/slideShow.js"></script>
