--- a/src/assets/styles/Master.scss
+++ b/src/assets/styles/Master.scss
@@ -11,6 +11,7 @@ body {
   font-size: 12px !important;
   font-family: $font-open-sans !important;
   background-color: $dirty-white !important;
+  transition: opacity 0.8s linear;
 }
 
 .footer-icons {
@@ -138,4 +139,12 @@ body {
   &:hover {
     transform: scale3d(1.5, 1.5, 1.5);
   }
+}
+
+.body-shown {
+  opacity: 1;
+}
+
+.body-hidden {
+  opacity: 0;
 }
